Add missing java options for packaged app